@@ -32,7 +32,10 @@ Version 0.9.7
   object (pull request ``#583``).
 - The ``qop`` parameter for ``WWW-Authenticate`` headers is now always quoted,
   as required by RFC 2617 (issue ``#633``).
-
+- Fix bug in ``werkzeug.contrib.cache.SimpleCache`` with Python 3 where add/set 
+  may throw an exception when pruning old entries from the cache (pull request
+  ``#650``).
+  
 Version 0.9.6
 -------------
 
